--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,18 @@
 -e .
 
 # external requirements
+gensim
+wandb
+sentencepiece
+tqdm
+nltk
+numpy
+sklearn
+torch
+
 click
 Sphinx
 coverage
-awscli
+awscli==1.27.89
 flake8
 python-dotenv>=0.5.1
